fixed untracked files

--- a/src/.env
+++ b/src/.env
@@ -1,7 +1,7 @@
 REACT_APP_API_KEY : "AIzaSyDDq9Kgw4nCg7CzBh18A9Jc8d0Qpg--MYo"
 REACT_APP_AUTH_DOMAIN : "kiosk-ordering.firebaseapp.com"
-REACT_APP_PROJECT_ID : "AIzaSyDDq9Kgw4nCg7CzBh18A9Jc8d0Qpg--MYo"
-REACT_APP_STORAGE_BUCKET : "AIzaSyDDq9Kgw4nCg7CzBh18A9Jc8d0Qpg--MYo"
-REACT_APP_MESSAGING_SENDER_ID : "AIzaSyDDq9Kgw4nCg7CzBh18A9Jc8d0Qpg--MYo"
-REACT_APP_APP_ID : "AIzaSyDDq9Kgw4nCg7CzBh18A9Jc8d0Qpg--MYo"
-REACT_APP_MEASUREMENT_ID : "AIzaSyDDq9Kgw4nCg7CzBh18A9Jc8d0Qpg--MYo"
+REACT_APP_PROJECT_ID : "kiosk-ordering"
+REACT_APP_STORAGE_BUCKET : "kiosk-ordering.appspot.com"
+REACT_APP_MESSAGING_SENDER_ID : "1011439035578"
+REACT_APP_APP_ID : "1:1011439035578:web:102548e3d41a644b3ace83"
+REACT_APP_MEASUREMENT_ID : "G-ZKQT9J25PR",
